crates/pgevolve-core-macros/tests/ui/unknown_attr.rs
use pgevolve_core_macros::Diff;

#[derive(Diff)]
struct S {
    #[diff(rename = "x")]
    name: String,
}

fn main() {}
